[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plotting_funcs"
version = "0.0.1"
authors = [
  { name="Simon Idoko", email="cisimon7@gmail.com" },
]
description = "A collection of commonly used plotting functions"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

#[project.urls]
#"Homepage" = "https://github.com/pypa/sampleproject"
#"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"